Fixed menu padding and scrollbar

--- a/src/imports/menu.css
+++ b/src/imports/menu.css
@@ -133,6 +133,7 @@ span#hamburger {
 	line-height: 25px;
 	width: 25px;
 	margin-right: 15px;
+	margin-left: -10px;
 	float: left;
 	-webkit-transition: color 1s ease;
 	-o-transition: color 1s ease;
@@ -185,7 +186,7 @@ ul.listview-icons{
 }
 .mm-menu a, .mm-menu a:active, .mm-menu a:hover, .mm-menu a:link, .mm-menu a:visited {
 	color: #000;
-	padding-left: 10px;
+	padding-left: 20px;
 }
 .mm-counter {
 	color: #6E7880;
@@ -554,6 +555,9 @@ height: 50px;
  transition-delay:calc(var(--mb-cross-timeout) + .2s)
 }
 
+.mm-panel ul {
+	padding-left: 0px !important;
+}
 
 
 
